:art: Add weighted map of Paradis